third_party/move/move-compiler-v2/tests/more-v1/parser/num_literal_underscore_trailing.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/num_literal_underscore_trailing.move:4:20
  │
4 │         let _ = 0u8_;
  │                    ^
  │                    │
  │                    Unexpected '_'
  │                    Expected ';'
