third_party/move/move-compiler-v2/tests/more-v1/parser/num_literal_underscore_trailing.move
module 0x42::M {
    fun t() {
        // Trailing underscore after bit-width suffix not allowed
        let _ = 0u8_;
    }
}
